cluster/synapse/bridge-meta.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bridge-meta
  namespace: synapse
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bridge-meta
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bridge-meta
    spec:
      containers:
        - image: dock.mau.dev/mautrix/meta:v0.3.2
          name: mautrix-meta
          ports:
            - containerPort: 29319
          volumeMounts:
            - name: data
              mountPath: /data
          workingDir: /data
      volumes:
        - name: config-templates
          configMap:
            name: config-meta
        - name: data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: bridge-meta
  namespace: synapse
spec:
  ports:
  - port: 29319
    protocol: TCP
    targetPort: 29319
  selector:
    app.kubernetes.io/name: bridge-meta
