cluster/synapse/bridge-signal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bridge-signal
  namespace: synapse
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bridge-signal
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bridge-signal
    spec:
      containers:
        - image: dock.mau.dev/mautrix/signal:v0.7.1
          name: mautrix-signal
          ports:
            - containerPort: 29328
            - name: metrics
              containerPort: 8000
          volumeMounts:
            - name: data
              mountPath: /data
            - name: signald
              mountPath: /signald
        - image: signald/signald:stable
          name: signald
          command:
            - /bin/bash
            - -c
            - |-
              export SIGNALD_DATABASE=postgresql://signald:$DBPASS@db-rw:5432/signald
              exec signald -d /signald --metrics -s /signald/signald.sock
          ports:
            - name: signald-metrics
              containerPort: 9595
          volumeMounts:
            - name: signald
              mountPath: /signald
      volumes:
        - name: config-templates
          configMap:
            name: config-signal
        - name: data
          emptyDir: {}
        - name: signald
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: bridge-signal
  namespace: synapse
spec:
  ports:
  - port: 29328
    protocol: TCP
    targetPort: 29328
  selector:
    app.kubernetes.io/name: bridge-signal
