cluster/synapse/bridge-telegram.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bridge-telegram
  namespace: synapse
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bridge-telegram
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bridge-telegram
    spec:
      containers:
        - image: dock.mau.dev/mautrix/telegram:v0.14.2
          name: mautrix-telegram
          ports:
            - containerPort: 29317
            - name: metrics
              containerPort: 8000
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: config-templates
          configMap:
            name: config-telegram
        - name: data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: bridge-telegram
  namespace: synapse
spec:
  ports:
  - port: 29317
    protocol: TCP
    targetPort: 29317
  selector:
    app.kubernetes.io/name: bridge-telegram
