cluster/synapse/bridge-whatsapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bridge-whatsapp
  namespace: synapse
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bridge-whatsapp
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bridge-whatsapp
    spec:
      containers:
        - image: dock.mau.dev/mautrix/whatsapp:v0.10.9
          name: mautrix-whatsapp
          ports:
            - containerPort: 29318
            - name: metrics
              containerPort: 8002
          volumeMounts:
            - name: data
              mountPath: /data
          workingDir: /data
      volumes:
        - name: config-templates
          configMap:
            name: config-whatsapp
        - name: data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: bridge-whatsapp
  namespace: synapse
spec:
  ports:
  - port: 29318
    protocol: TCP
    targetPort: 29318
  selector:
    app.kubernetes.io/name: bridge-whatsapp
