cluster/synapse/synapse.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synapse
  namespace: synapse
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: synapse
  template:
    metadata:
      labels:
        app.kubernetes.io/name: synapse
    spec:
      containers:
        - image: matrixdotorg/synapse:v1.116.0
          name: synapse
          ports:
            - name: synapse
              containerPort: 8008
            - name: metrics
              containerPort: 9000
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
            - name: signing-key
              mountPath: /signing-key
      volumes:
        - name: config-templates
          configMap:
            name: config
        - name: config
          emptyDir: {}
        - name: media
          persistentVolumeClaim:
            claimName: media
        - name: signing-key
          secret:
            secretName: signing-key
---
apiVersion: v1
kind: Service
metadata:
  name: synapse
  namespace: synapse
spec:
  ports:
  - port: 8008
    protocol: TCP
    targetPort: 8008
  selector:
    app.kubernetes.io/name: synapse
