cluster/synapse/syncv3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncv3
  namespace: synapse
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: syncv3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: syncv3
    spec:
      containers:
        - image: ghcr.io/matrix-org/sliding-sync:v0.99.19
          command:
            - sh
            - -c
            - |
              export SYNCV3_DB="host=db-rw dbname=syncv3 user=syncv3 password='$DBPASS'"
              exec /usr/bin/syncv3
          name: syncv3
          ports:
            - name: syncv3
              containerPort: 8008
            - name: metrics
              containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: syncv3
  namespace: synapse
spec:
  ports:
  - port: 8008
    protocol: TCP
    targetPort: 8008
  selector:
    app.kubernetes.io/name: syncv3
